# perturbguard

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
case_studies/: README.md
case_studies/jorge/: README.md  expected_findings.csv  manifest.yaml
case_studies/jorge/expected_outputs/: validation_results.csv
case_studies/lincs/: README.md  expected_findings.csv  manifest.yaml
case_studies/lincs/expected_outputs/: validation_results.csv
case_studies/sciplex/: README.md  expected_findings.csv  manifest.yaml
case_studies/sciplex/expected_outputs/: validation_results.csv
configs/: default.yaml  jorge_example.yaml  lincs_example.yaml  sciplex_example.yaml
docs/: advanced_features.md  assumptions.md  beta_test_report.md  example_workflows.md  input_contract.md  release_checklist.md
scripts/: download_norman_2019.py  make_demo_subset.py  run_smoke_matrix.py
src/perturbguard/adversarial/: __init__.py  tests.py
src/perturbguard/benchmark/: __init__.py  manifest.py  validation.py
src/perturbguard/claims/: claim_checker.py
src/perturbguard/cli/: main.py
src/perturbguard/compare/: datasets.py
src/perturbguard/design/: checker.py  power.py
src/perturbguard/evaluate/: __init__.py  model.py
src/perturbguard/io/: config.py  config_wizard.py  schema.py  split_loader.py
src/perturbguard/leakage/: combination_leakage.py  leakage_graph.py  pathway_leakage.py  split_balance.py  split_leakage.py
src/perturbguard/qc/: cell_count.py  confounding.py  control_balance.py  dataset_validator.py  guide_consistency.py  matched_controls.py  metadata_shortcut.py  perturbation_summary.py  target_effect.py  target_mapping.py
src/perturbguard/repair/: __init__.py  anndata.py
src/perturbguard/reports/: dataset_card.py  html.py  plots.py  preflight.py  recommendations.py  summary.py
src/perturbguard/simulate/: synthetic_anndata.py
src/perturbguard/splitting/: strategies.py
src/perturbguard/streaming/: __init__.py  profile.py
src/perturbguard/utils/: controls.py  matrix.py  status.py
tests/: test_bug_hunt_edge_cases.py  test_cli_completion.py  test_hardening.py  test_mvp.py  test_production_readiness.py  test_top10_features.py  test_v02_qc.py  test_v03_quality.py  test_v04_splits_claims.py  test_v05_reports_demo.py  test_v06_stretch.py
workflows/snakemake/: Snakefile  config.yaml
workflows/snakemake/profiles/slurm/: config.yaml
