[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturbguard"
version = "1.0.3"
description = "QC, leakage detection, split design, and claim validation for single-cell perturbation studies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "PerturbGuard contributors"},
]
keywords = ["single-cell", "perturb-seq", "quality-control", "leakage", "anndata"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "anndata>=0.10",
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "networkx",
  "typer",
  "rich",
  "pyyaml",
  "jinja2",
  "plotly",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.scripts]
perturbguard = "perturbguard.cli.main:app"

[project.urls]
Homepage = "https://github.com/prithvirajanR/perturbguard"
Documentation = "https://github.com/prithvirajanR/perturbguard#readme"
Issues = "https://github.com/prithvirajanR/perturbguard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perturbguard = ["reports/templates/*.j2"]

[tool.setuptools.data-files]
"share/perturbguard/configs" = ["configs/*.yaml"]
"share/perturbguard/docs" = ["docs/*.md"]
"share/perturbguard/case_studies" = ["case_studies/README.md"]
"share/perturbguard/case_studies/sciplex" = ["case_studies/sciplex/*.md", "case_studies/sciplex/*.yaml", "case_studies/sciplex/*.csv"]
"share/perturbguard/case_studies/sciplex/expected_outputs" = ["case_studies/sciplex/expected_outputs/*.csv"]
"share/perturbguard/case_studies/jorge" = ["case_studies/jorge/*.md", "case_studies/jorge/*.yaml", "case_studies/jorge/*.csv"]
"share/perturbguard/case_studies/jorge/expected_outputs" = ["case_studies/jorge/expected_outputs/*.csv"]
"share/perturbguard/case_studies/lincs" = ["case_studies/lincs/*.md", "case_studies/lincs/*.yaml", "case_studies/lincs/*.csv"]
"share/perturbguard/case_studies/lincs/expected_outputs" = ["case_studies/lincs/expected_outputs/*.csv"]
"share/perturbguard/workflows/snakemake" = ["workflows/snakemake/Snakefile", "workflows/snakemake/config.yaml"]
"share/perturbguard/workflows/snakemake/profiles/slurm" = ["workflows/snakemake/profiles/slurm/config.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
